@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: libxml.c,v 1.8 2003/11/07 19:12:46 iliaa Exp $ */
+/* $Id: libxml.c,v 1.9 2003/11/28 23:25:25 pollita Exp $ */
 
 #define IS_EXT_MODULE
 
@@ -253,7 +253,7 @@ void *php_libxml_streams_IO_open_wrapper(const char *filename, const char *mode)
 	   in xml processing (eg. DTD files)  */
 	wrapper = php_stream_locate_url_wrapper(resolved_path, &path_to_open, ENFORCE_SAFE_MODE TSRMLS_CC);
 	if (wrapper && wrapper->wops->url_stat) {
-		if (wrapper->wops->url_stat(wrapper, path_to_open, &ssbuf TSRMLS_CC) == -1) {
+		if (wrapper->wops->url_stat(wrapper, path_to_open, 0, &ssbuf, NULL TSRMLS_CC) == -1) {
 			return NULL;
 		}
 	}
